3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/spell_effect.c: In polymorph_item() fix possible access to freed
   object.
common/los.c: In update_los() fix array out-of-bounds access for clients using
   25x25 map size.
Andreas Kirschbaum 2007-04-24

Clean old code related to single player directory.
 include/sproto.h
 server/login.c player.c
Nicolas Weeger 2007-04-23

Implement feature request #1560389: improve inscription logic.
New server command, "inscribe", that makes it easy to send spell and scroll information.
'setup inscribe 1' will return 'inscribe 1', so client know they can use this command.
 doc/Developers/protocol
 include/sockproto.h
 socket/item.c loop.c request.c
Nicolas Weeger 2007-04-23

Add background music support to maps, change 'socket.sound' field signification.
Add SockList_AddString helper function.
 common/map.c
 include/map.h newserver.h sockproto.h sounds.h
 server/c_misc.c server.c
 socket/lowlevel.c sounds.c
Nicolas Weeger 2007-04-22

server/apply.c: remove legacy spellbook handling.
Nicolas Weeger 2007-04-22

Second and last part of feature request #1543553: Inventories in artifacts/archetypes.
It's now possible to put "arch" in archetypes, they'll be correctly handled.
Like any other object, you can customize it.
 common/arch.c loader.l
Nicolas Weeger 2007-04-22

server/server.c:  Add some debug to see if objects are on swapped out
  maps in process_objects()
socket/loop.c: Hopeful fix for old bug - can be rare cases where
  next player gets freed, so code tries to process garbage player
  and crashes.
MSW 2007-04-21

lib/artifacts: fix bug #1673804: Items "of Occidental Mages" use obsolete
event_xxx fields.